# rapid-ocr-rknn

./: .gitignore  CMakeLists.txt  README.md
convert/: convert.py  datasets.py  main.py  pyproject.toml
include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrLiteImpl.h  OcrUtils.h  version.h
src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteImpl.cpp  OcrUtils.cpp
